Temperature button is fixed

--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -56,7 +56,7 @@
   <div class="weather-box">
     <div class="row" style="position:relative">
       <!-- <p id="before" style="color:white; position:relative;  margin:0 auto"></p> -->
-      <button class="btn purple-gradient btn-rounded btn-hover weather animated zoomIn"></button>
+      <button class="btn purple-gradient btn-rounded btn-hover weather animated zoomIn" align="center"></button>
       <!-- <p id="after" style="color:white; position:relative; margin:0 auto"></p> -->
     </div>
   </div>
