--- a/weatherapp/templates/snow.html
+++ b/weatherapp/templates/snow.html
@@ -1,5 +1,5 @@
 <div class="svg-contain">
-    <svg version="1.1" class="snow-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 70.3 52.6" style="enable-background:new 0 0 70.3 52.6;" xml:space="preserve">
+    <svg version="1.1" class="snow-svg" preserveAspectRatio="X200Y200 meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 70.3 52.6" style="enable-background:new 0 0 70.3 52.6;" xml:space="preserve">
 <g id="Layer_1">
 	<path class="cloud" d="M63.9,30.9c0-5.2-4.2-9.4-9.4-9.4c-0.2,0-0.4,0.1-0.7,0.1c-0.1-0.9-0.2-1.8-0.5-2.7c-0.3-1.1-0.9-2.2-1.5-3.1
 		c-2.1-3.2-5.8-5.3-9.9-5.3c-2.5,0-4.8,0.7-6.7,2c-0.6,0.4-1.2,0.9-1.8,1.5c-0.3,0.3-0.5,0.6-0.8,0.8c-0.2,0.3-0.5,0.6-0.7,0.9
