fixed width of slidesshow-container

--- a/weatherapp/templates/cardsWithTransition.html
+++ b/weatherapp/templates/cardsWithTransition.html
@@ -29,7 +29,7 @@
       font-family: "Lato", sans-serif;
     }
   </style>
-  <div class="daily">  
+  <div class="slideshow-container">  
     <div class="mySlides animated fadeIn">
       <div class="col-sm text-center">
         <div class="card">
